配置文件改造